# EntropIA

./: .gitattributes  .gitignore  AGENTS.md  ANALISIS_OPTIMIZACIONES_2026-04-28.md  CLAUDE.md  DATABASE_DEBUGGING.md  FLUJO.md  LICENSE  OCRH_Persistent_Worker_Plan.md  README.md  SQLite.md  erroresx.md  eslint.config.js  logxxx.md  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json  vitest.workspace.ts
.atl/: skill-registry.md
.engram/: manifest.json
.github/: release-template.md
.github/workflows/: ci.yml  lockfile-reset.yml  release-macos-intel.yml  release.yml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop/src/: App.svelte  app.css  main.ts  svelte-components.d.ts  test-setup.ts
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/.cargo/: config.toml
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/resources/: README.md  sqlite-vec-windows-tradeoff.md
apps/desktop/src-tauri/resources/lib/: .gitkeep
apps/desktop/src-tauri/resources/models/: README.md
apps/desktop/src-tauri/resources/models/ner/: README.md  config.json  manifest.json  tokenizer_config.json
apps/desktop/src-tauri/resources/scripts/: embed.py  paddle_vl.py  spacy_triples.py
apps/desktop/src-tauri/scripts/: download-ocr-models.ps1  download-ocr-models.sh  embed.py  layout_detect.py  prepare-ner-model.ps1  rust-coverage.ps1  rust-quality-contract.ps1  rust-verify-gate.ps1  spacy_ner.py  transcribe.py  windows-feature-contract.ps1
apps/desktop/src-tauri/scripts/ci/: pnpm-preinstall-classify.ps1  pnpm-preinstall-forensics.ps1
apps/desktop/src-tauri/scripts/tests/: ci-pnpm-preinstall-forensics.Tests.ps1  ci-rust-quality-workflow.Tests.ps1  lockfile-reset-workflow.Tests.ps1  pnpm-preinstall-classification.Tests.ps1  pnpm-preinstall-forensics-script.Tests.ps1  rust-quality-contract.Tests.ps1  rust-verify-gate.Tests.ps1
apps/desktop/src-tauri/src/: image_edit.rs  lib.rs  main.rs  path_utils.rs  python_discovery.rs  settings.rs
apps/desktop/src-tauri/src/db/: commands.rs  state.rs
apps/desktop/src-tauri/src/geo/: commands.rs  mod.rs
apps/desktop/src-tauri/src/layout/: commands.rs  engine.rs  mod.rs  reading_order.rs  region.rs
apps/desktop/src-tauri/src/llm/: commands.rs  engine.rs  mod.rs  openrouter.rs  prompt.rs  sidecar.rs
apps/desktop/src-tauri/src/nlp/: commands.rs  embeddings.rs  fts.rs  mod.rs  ner.rs  text_provider.rs  triples.rs
apps/desktop/src-tauri/src/nlp/ner/: hybrid.rs  merge.rs  mod.rs  onnx.rs  rule_based.rs  spacy.rs  types.rs
apps/desktop/src-tauri/src/ocr/: commands.rs  debug_viz.rs  engine.rs  layout_onnx.rs  mod.rs  paddle.rs  paddle_vl.rs  pdf.rs  postprocess.rs  preprocessor.rs  provider.rs  reading_order.rs  tesseract.rs
apps/desktop/src-tauri/src/transcription/: audio.rs  commands.rs  engine.rs  mod.rs
apps/desktop/src/layout/: AppShell.svelte  AppShell.test.ts  DocumentExplorer.svelte  DocumentExplorer.test.ts  TopBar.svelte  TopBar.test.ts
apps/desktop/src/lib/: db-browser-shortcuts.test.ts  db-browser-shortcuts.ts  db-browser-view.test.ts  db-browser-view.ts  db-browser.ts  db.ts  deps.ts  document-explorer.ts  export.test.ts  export.ts  file-import.test.ts  file-import.ts  geo.ts  i18n.test.ts  i18n.ts  keyboard.test.ts  keyboard.ts  layout-inspector.test.ts  layout-inspector.ts  layout.test.ts  layout.ts  layouts.test.ts  layouts.ts  llm.test.ts  llm.ts  modal-focus.test.ts  modal-focus.ts  navigation.test.ts  navigation.ts  nlp.test.ts  nlp.ts  ocr.test.ts  ocr.ts  settings.test.ts  settings.ts  transcription.test.ts  transcription.ts
apps/desktop/src/views/: CollectionView.svelte  CollectionView.test.ts  CollectionsView.svelte  CollectionsView.test.ts  DbBrowserView.svelte  DbBrowserView.test.ts  DependenciasTab.svelte  ItemView.svelte  ItemView.test.ts  SettingsView.svelte  SettingsView.test.ts
docs/: ci-rust-quality.md
entorno_pruebas/: bert_ner.py
openspec/changes/archive/2026-04-11-fase-2-ocr-procesamiento/: archive-report.md  design.md  exploration.md  proposal.md  spec.md  tasks.md  verify-report.md
openspec/changes/archive/2026-04-11-fase-3-nlp-embeddings-fts5/: archive-report.md  proposal.md  tasks.md  verify-report.md
openspec/changes/archive/fase-0-fundaciones/: archive-report.md  design.md  exploration.md  proposal.md  spec.md  state.yaml  tasks.md  verify-report.md
openspec/changes/archive/fase-1-mvp-documental/: archive-report.md  design.md  exploration.md  proposal.md  spec.md  tasks.md  verify-report.md
openspec/changes/fase-3-nlp-embeddings-fts5/: design.md  exploration.md  tasks.md
openspec/changes/image-annotations-mvp/: design.md  proposal.md  spec.md  tasks.md
openspec/changes/tripletes-semanticos-v1/: proposal.md  tasks.md  verify-report.md
openspec/specs/ci/: spec.md
openspec/specs/collection-management/: spec.md
openspec/specs/data-store/: spec.md
openspec/specs/design-system/: spec.md
openspec/specs/desktop-app/: spec.md
openspec/specs/document-viewer/: spec.md
openspec/specs/export/: spec.md
openspec/specs/item-management/: spec.md
openspec/specs/monorepo/: spec.md
openspec/specs/ner-entities/: spec.md
openspec/specs/nlp-ux/: spec.md
openspec/specs/notes/: spec.md
openspec/specs/ocr-processing/: spec.md
openspec/specs/ocr-ux/: spec.md
openspec/specs/search/: spec.md
openspec/specs/testing-infrastructure/: spec.md
scripts/: convert_ori_model.py
temporal/.atl/verify-artifacts/run-24315667021/: lcov.info  (+2 more)
tools/llm-sidecar/: Cargo.toml
tools/llm-sidecar/src/: main.rs
(+174 files in other folders)
