[package]
name = "llm-sidecar"
version = "0.1.0"
edition = "2021"
description = "Vision-capable LLM sidecar for EntropIA — isolated process for mmproj inference"

[[bin]]
name = "llm-sidecar"
path = "src/main.rs"

[dependencies]
llama-cpp-2 = { version = "0.1", features = ["mtmd"] }
encoding_rs = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"