[package]
name = "entropia-desktop"
version = "0.0.1"
edition = "2021"

[lib]
name = "entropia_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
thiserror = "1"
leptess = "0.14"
pdf-extract = "0.7"
image = "0.25"
imageproc = "0.25"
tokio = { version = "1", features = ["full"] }
regex = "1"
once_cell = "1"
uuid = { version = "1", features = ["v4"] }
# Embeddings now use Python fastembed subprocess (scripts/embed.py) instead of
# the Rust crate, which fails on Windows due to ORT/MSVC linker issues.
# Transcription also uses Python subprocess (scripts/transcribe.py).
# Both follow the same pattern: Rust spawns Python, captures JSON output.

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
